# contribute

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Core/Arrays/: Arrays.sln
Core/Arrays/Arrays/: ArrayOfPointers.cpp  ArrayOfStructs.cpp  ArrayOfStructs.h  Arrays.vcxproj  DeclareAndAllocate.cpp  Initializers.cpp  MultiDimensional.h  Pointers.h  main.cpp
Core/Arrays/Arrays/Arrays/: ArrayOfPointers.h  Arrays.vcxproj.filters  CharacterArrays.cpp  CharacterArrays.h  Const.cpp  Const.h  DeclareAndAllocate.h  Headers.h  Initializers.h  MultiDimensional.cpp  Pointers.cpp  ReferencesAndArrays.cpp  ReferencesAndArrays.h  Values.cpp  Values.h  Vectors.cpp  Vectors.h
Core/Arrays/Arrays/Debug/: vc120.idb
Core/Arrays/Debug/: vc120.idb
Core/Arrays/Debug/Arrays.tlog/: cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog
Core/Pointers/: Pointers.sln
Core/Pointers/E2/: Aliases.cpp  Aliases.h  BasicPointers.cpp  BasicPointers.h  ConstAndPointers.cpp  ConstAndPointers.h  E2.vcxproj  E2.vcxproj.filters  FunctionsAndPointers.cpp  FunctionsAndPointers.h  Headers.cpp  Headers.h  InverseOperations.cpp  InverseOperations.h  LValuesAndRValues.cpp  LValuesAndRValues.h  NullAndNullPtr.cpp  NullAndNullPtr.h  PointerToPointers.cpp  PointerToPointers.h  main.cpp
Core/Pointers/Release/: Pointers.iobj  Pointers.ipdb
baseProjects/C++ Base/: CMakeLists.txt
baseProjects/C++ Base/source/: main.cpp
baseProjects/OpenGL Base/: CMakeLists.txt  README.md  igme_config.yml
baseProjects/OpenGL Base/source/: main.cpp
(+48 files in other folders)
